updated with projects

--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width">
+    <title>Nate Farnsworth</title>
+    <link href="https://fonts.googleapis.com/css?family=Oxygen|Source+Sans+Pro" rel="stylesheet">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <p>...hey.</p>
+    <div class="main">
+        <h1>Nate Farnsworth</h1>
+        <p>is a web developer, just like Spiderman.</p>
+
+        <h1>Current Projects</h1>
+        <ul>
+            <li><strong>KidQuest</strong> - kids complete chores and good behavior quests for in-game/IRL loot!</li>
+            <li><strong>Coderena</strong> - who's the better coder?  arena style code battles, with random modifiers</li>
+            <li><strong>Current</strong> - improve your ability to achieve 'flow state' while studying</li>
+        </ul>
+    </div>
 </body>
 </html>
